# pardes-decoder

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: 01_text_parsing.py  02_pattern_detection.py  03_semantic_graphs.py  04_comprehensive_analysis.py
pardes/: __init__.py  pattern_detector.py  semantic_graph.py  text_parser.py
tests/: test_pattern_detector.py  test_semantic_graph.py  test_text_parser.py
